--- a/client/group.jade
+++ b/client/group.jade
@@ -4,16 +4,6 @@ template(name='group')
             .sixteen.wide.column
                 .ui.inline.header    
                     |#{current_group}
-                // a.ui.header(href=link title='link')
-                //     i.link.icon
-                //     |link
-                // if in_dev
-                //     +print_this
-                // +voting_full
-                // +array_view key='tags' label='tags' icon='tags' direct=true
-                // +comments
-                // .f11 #{description}
-                // +image_link_view key='image' label='image' direct=true
                 .ui.icon.circular.basic.button.add_post
                     i.plus.icon
                 if selected_tags
@@ -160,10 +150,21 @@ template(name='post_card')
                 +flat_tag_selector
             if is_admin 
                 +remove_button
-            +doc_emotion_small        
-                // .ui.small.label #{this}
-        // .ui.divider
+            +doc_emotion_small    
+            span(title='views')
+                i.grey.eye.icon
+                |#{views}
+            +voting
+            +array_view key='people_tags' icon='user outline' direct=true
+            +array_view key='time_tags' icon='clock' direct=true
+            +array_view key='location_tags' icon='marker' direct=true
      
+                
+template(name='voting')
+    i.thumbs.up.outline.link.big.icon.upvote
+    |#{points}
+    i.thumbs.down.outline.link.big.icon.downvote
+    
                 
 template(name='post_card_med')     
     .column
@@ -188,7 +189,12 @@ template(name='post_card_med')
                 +flat_tag_selector
             if is_admin 
                 +remove_button
-            +doc_emotion_small        
+            +doc_emotion_small  
+            +array_view key='people_tags' label='people tags' icon='user outline' direct=true
+            +array_view key='time_tags' label='time tags' icon='clock' direct=true
+            +array_view key='location_tags' label='location tags' icon='marker' direct=true
+            
+            +voting    
                 // .ui.small.label #{this}
         // .ui.divider
      
@@ -234,7 +240,7 @@ template(name='group_post_view')
                         .ui.large.inline.header #{title}
                         // div
                         .ui.grey.header {{when}}
-                        
+                        +voting
                         if can_edit
                             a.edit_group_post(href="/#{group}/p/#{_id}/edit" title='edit')
                                 i.large.link.pencil.icon
