--- a/client/watson.jade
+++ b/client/watson.jade
@@ -122,7 +122,7 @@ template(name='autotag')
             
             
 template(name='call_tone')
-    button.ui.basic.circular.large.button.call
+    button#call_tone.ui.basic.circular.large.button
         i.smile.icon
         |call tone
     if page_doc.tone 
@@ -385,3 +385,37 @@ template(name='watson_view')
     //-     if watson 
     //-         +jsonView json=watson
     //- .ui.divider
+    
+    
+    
+template(name='tone')
+    // h3 tone
+    .ui.horizontal.list
+        each tone.result.document_tone.tones
+            .item #{tone_id} {{ to_percent score }}%
+    .ui.small.list
+        each tone.result.sentences_tone
+            .item
+                
+                //- span #{sentence_id}
+                span.tone_item(title="#{sentence_id}" class=tone_size) 
+                    |{{lowered text}}
+                    // .content
+                    // .header(title="#{sentence_id}") {{lowered text}}
+                    // |weight:#{weight}
+                    i.chevron.up.link.grey.large.icon.upvote_sentence
+                    i.chevron.down.link.grey.large.icon.downvote_sentence
+                    each tones
+                        // .ui.basic.inverted.small.compact.circular.label(class="{{calculated_size 'score'}} #{tone_label_class}") 
+                        .ui.basic.inverted.small.compact.circular.label(class="#{tone_label_class}") 
+                            span.ui.text
+                                |#{tone_id} &nbsp;
+                            | {{ to_percent score }}% 
+                    .ui.mini.transparent.icon.input
+                        input.tag_sentence(type='text' placeholder='tag')
+                    each tags 
+                        .ui.label #{this}
+    // unless tone                
+    //- #call_tone.ui.icon.button
+    //-     i.refresh.icon
+    
