--- a/client/watson.jade
+++ b/client/watson.jade
@@ -403,8 +403,8 @@ template(name='tone')
                     // .content
                     // .header(title="#{sentence_id}") {{lowered text}}
                     // |weight:#{weight}
-                    i.chevron.up.link.grey.large.icon.upvote_sentence
-                    i.chevron.down.link.grey.large.icon.downvote_sentence
+                    i.chevron.up.link.grey.icon.upvote_sentence
+                    i.chevron.down.link.grey.icon.downvote_sentence
                     each tones
                         // .ui.basic.inverted.small.compact.circular.label(class="{{calculated_size 'score'}} #{tone_label_class}") 
                         .ui.basic.inverted.small.compact.circular.label(class="#{tone_label_class}") 
