first emojis replacing tone labels

--- a/client/client.jade
+++ b/client/client.jade
@@ -35,8 +35,8 @@ head
         gtag('config', 'G-GLYPPRGJFQ');
 
 
-            
-            
+template(name='emoji')
+    em(data-emoji=name)
 
 template(name='layout')
     +status
