--- a/client/group.jade
+++ b/client/group.jade
@@ -1,5 +1,5 @@
 template(name='group')
-    .ui.stackable.padded.grid
+    .ui.stackable.grid
         .row 
             .sixteen.wide.column
                 .ui.inline.header    
@@ -198,9 +198,9 @@ template(name='post_card')
      
                 
 template(name='voting')
-    i.thumbs.up.outline.link.big.icon.upvote
+    i.thumbs.up.outline.link.large.icon.upvote
     .ui.inline.header #{points}
-    i.thumbs.down.outline.link.big.icon.downvote
+    i.thumbs.down.outline.link.large.icon.downvote
     
                 
 template(name='post_card_med')     
