two column main view, gotta juice

--- a/client/group.jade
+++ b/client/group.jade
@@ -149,7 +149,7 @@ template(name='group')
                         each posts
                             +post_card_med
                 else 
-                    .ui.stackable.three.column.centered.padded.grid.scrolling
+                    .ui.stackable.two.column.centered.padded.grid.scrolling
                         if posts.count
                             each posts
                                 +post_card
