v1 working emotion up/down

--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -11,7 +11,7 @@ template(name='alpha')
     //                 |#{this}
         
         // if viewing_alpha
-    // if skv_is 'loading_alpha' true
+    // if skve 'loading_alpha' true
     //     .ui.header 
     //         i.large.brain.loading.icon 
     //         |alpha...
