--- a/client/wiki.jade
+++ b/client/wiki.jade
@@ -2,7 +2,7 @@ template(name='wiki')
     .ui.stackable.padded.grid
         .row
             .sixteen.wide.center.aligned.column
-                // if skv_is 'nightmode' true
+                // if skve 'nightmode' true
                 //     i.moon.link.icon.toggle_nightmode
                 // else
                 //     i.lightbulb.link.icon.toggle_nightmode
